# Magnetic_rotary_encoding

./: ADCRead.cpp  ADCRead.h  MagRotaryEncoding.cpp  MagRotaryEncoding.h  README.md  keywords.txt
Arduino/ADCRead/: ADCRead.cpp  ADCRead.h  keywords.txt
Arduino/Magnetic_rotary_encoding/: MagRotaryEncoding.cpp  MagRotaryEncoding.h  keywords.txt
Magnetic Encoder Servo Project/: magnetic encoder servo fritzing.fzz
Magnetic Encoder Servo Project/Code/: MagRotaryEncoding.cpp  PID.h  main.cpp
Magnetic_rotary_encoding/: MagRotaryEncoding.cpp
MicroPython/Magnetic_rotary_encoding/: MagEncoder Example.py  MagneticRotaryEncoder.py
PI PICO C++ SDK/Magnetic_rotary_encoding/: CMakeLists.txt  MagRotaryEncoding.cpp  MagRotaryEncoding.h  main.cpp
PICO DEV M3/: readme.md
PICO DEV M3/3D Printing Files/: RP2040 ENCODER - BEARING HOLDER-1.STL  RP2040 ENCODER - BOARD BUTTOM-1.STL  RP2040 ENCODER - BOARD TOP-1.STL  RP2040 ENCODER - BUTTON BASE-1.STL  RP2040 ENCODER - KNOB-1.STL  RP2040 ENCODER - SLOT-1.STL
PICO DEV M3/C-C++ SDK/: readme.md
PICO DEV M3/MicroPython/: MagEncoder Example.py  readme.md
PICO DEV M3/PICO DEV M3 KEYPAD/: Button_Switch_Keyboard.pretty.7z  KEYS.kicad_sch  PICO DEV M3 KEYPAD.kicad_pcb  PICO DEV M3 KEYPAD.kicad_prl  PICO DEV M3 KEYPAD.kicad_pro  PICO DEV M3 KEYPAD.kicad_sch  fp-info-cache
PICO DEV M3/Pico Dev M3 Pio Stepper controller/: Pi Pico Stepper controller.kicad_pcb  Pi Pico Stepper controller.kicad_prl  Pi Pico Stepper controller.kicad_pro  Pi Pico Stepper controller.kicad_sch  fp-info-cache
fritzing part/: MAGNETIC-ROTARY-ENCODER.fzpz
(+54 files in other folders)
